--- a/Client/App.config
+++ b/Client/App.config
@@ -14,7 +14,7 @@
                 <value />
             </setting>
             <setting name="UsernameSetting" serializeAs="String">
-                <value />
+                <value>User1</value>
             </setting>
             <setting name="BackgroundImageSetting" serializeAs="String">
                 <value />
